c/examples/writing-a-c-compiler-tests/tests/chapter_18/invalid_parse/struct_member_name_kw.c
// cannot use a keyword (like 'return') as a field name

struct s {
    int return;
}

int main(void) {
    return 0;
}